Fix table text alignment

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -38,3 +38,8 @@ label {
 .proposal-meta {
   border: none;
 }
+
+td, th {
+  vertical-align: top;
+  line-height: 1.6em;
+}
